Centered services on smaller devices

--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- todo de aliniat pozele pe mobil-->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
@@ -129,7 +128,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon">
                 <img src="assets/img/logo_html.png" alt="HTML5 Logo">
@@ -140,7 +139,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><img src="assets/img/logo_css.png" alt="CSS3 Logo"></div>
               <h4 class="title">CSS Designing</h4>
@@ -149,7 +148,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><img src="assets/img/clipart1504620.png" alt="JavaScript Logo" width="185" height="200">
               </div>
