--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><img src="assets/img/apple-touch-icon.png" alt="Bootstrap Logo" width="190"
                   height="200">
@@ -358,7 +358,6 @@
               <div class="social-links mt-3">
                 <a href="https://www.facebook.com/roberto.benczik" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/bencxik/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://github.com/patrikbenczik15" class="github"><i class="bx bxl-github"></i></a>
               </div>
             </div>
           </div>
